name:            wai-handler-scgi
version:         0.4.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Wai handler to SCGI
category:        Web
stability:       stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/snoyberg/wai-handler-scgi

library
    build-depends:   base                >= 4           && < 5
                   , wai                 >= 0.4         && < 0.5
                   , wai-extra           >= 0.4         && < 0.5
                   , bytestring          >= 0.9.1.4     && < 0.10
    exposed-modules: Network.Wai.Handler.SCGI
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/wai-handler-scgi.git
