Name:                wai
Version:             0.4.1
Synopsis:            Web Application Interface.
Description:         Provides a common protocol for communication between web aplications and web servers.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/snoyberg/wai
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable

Source-repository head
    type:            git
    location:        git://github.com/snoyberg/wai.git

Library
  Build-Depends:     base                   >= 3        && < 5
                   , bytestring             >= 0.9      && < 0.10
                   , blaze-builder          >= 0.2      && < 0.4
                   , enumerator             >= 0.4.8    && < 0.5
                   , network                >= 2.2      && < 2.4
                   , http-types             >= 0.6      && < 0.7
                   , text                   >= 0.5      && < 1.0
                   , transformers           >= 0.2      && < 0.3
  Exposed-modules:   Network.Wai
  ghc-options:       -Wall
