Name:                zlib-conduit
Version:             0.2.0
Synopsis:            Streaming compression/decompression via conduits.
Description:         Streaming compression/decompression via conduits.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  test/main.hs

flag debug

Library
  Exposed-modules:     Data.Conduit.Zlib
  Build-depends:       base                     >= 4            && < 5
                     , containers
                     , transformers             >= 0.2.2        && < 0.3
                     , bytestring               >= 0.9
                     , zlib-bindings            >= 0.0.3        && < 0.1
                     , conduit                  >= 0.2
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , base
                   , hspec
                   , HUnit
                   , QuickCheck
                   , bytestring
                   , transformers
                   , zlib-conduit
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
